tests/errors/sem_call28.java
public class sem_call28 {
public static int method(int i, String s){

}
public static void main(String[] args){

int i; String s;
method(s , s);
}
}